# Copyright 2025 North Pole Security, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(name = "rednose")

bazel_dep(name = "apple_support", version = "1.22.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "cxx.rs", version = "1.0.158")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_rust", version = "0.61.0")

# Load rules_rust dependencies
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.86.0"],
)
use_repo(rust, "rust_toolchains")

# Rust crates
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")

crate.from_cargo(
    name = "crate_index",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",

        # Keep this list in sync with the root Cargo.toml.
        "//rednose:Cargo.toml",
    ],
    supported_platform_triples =  [
        "aarch64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "x86_64-apple-darwin",
        "x86_64-unknown-linux-gnu",
    ],
)
use_repo(crate, "crate_index")

# Hedron's Compile Commands Extractor
# Note: Moved to a fork because the original project's maintenance status is in limbo.
# The maintainer claims to still be around, but nothing is getting merged:
#   https://github.com/hedronvision/bazel-compile-commands-extractor/issues/232#issuecomment-2512931043
#   https://github.com/hedronvision/bazel-compile-commands-extractor/issues/240
bazel_dep(name = "hedron_compile_commands")
git_override(
    module_name = "hedron_compile_commands",
    commit = "f5fbd4cee671d8d908f37c83abaf70fba5928fc7",
    remote = "https://github.com/mikael-s-persson/bazel-compile-commands-extractor.git",
)
