# Copyright 2025 North Pole Security, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "rednose"
version = "0.1.0"
edition = "2024"
description = "Common code for NPS agents"
rust-version = "1.86.0"

[lib]
name = "rednose"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0.158"
object_store = { version = "0.12.1", features = ["aws", "gcp"] }
tokio = { version = "1.45.1", default-features = false, features = ["rt"] }
